--- a/collide-try.html
+++ b/collide-try.html
@@ -1269,7 +1269,7 @@
 //////////////////////////////////////////////////////////////////////
     
     // TODO 当前应用环境，发布时记得修改。prod-正式环境，不打日志；dev-开发环境；debug-调试环境
-    const currActive = "prod";
+    const currActive = "dev";
     function isProd() {
         if (currActive && currActive.toLowerCase() === "prod") return true;
         return false;
@@ -1662,6 +1662,8 @@
         //window.history.pushState(null, null, "#");
         history.pushState(null, null, document.URL);
     }
+    var backClickCount = 0;
+    var backClickTimer = 0;
     function doBack() {
         // 弹窗遮罩
         let isDialogMaskShowing = isDialogShowing(dialogMask);
@@ -1696,6 +1698,17 @@
         if (checkIsMoving()) {
             //alert("👉 游戏正在进行，不建议返回哦~");
             return;
+        } else {
+            if (!backClickTimer) backClickTimer = setTimeout(() => {
+                backClickCount = 0;
+                backClickTimer && clearTimeout(backClickTimer);
+                backClickTimer = 0;
+            }, 3000);
+            backClickCount += 1;
+            if (backClickCount > 2) {
+                alert("👉 刷新页面重选角色，关掉页面退出游戏");
+                backClickCount = 0;
+            }
         }
         
         /*
@@ -1712,7 +1725,7 @@
                 window.open('', '_self');
                 // Scripts may close only the windows that were opened by them.
                 // window.close()方法只能关闭由window.open()或者浏览器直接输入url打开的页面，其余情况安全考虑是被限制的
-                window.close(); // 关不了
+                window.close(); // js关不了，需要按钮点击调用
             } else { // 取消
                 // ignore
             }
