修复重选角色场景中心图形丢失问题

--- a/collide-try.html
+++ b/collide-try.html
@@ -7483,7 +7483,10 @@ window.Colorpicker = Colorpicker;
             drawMonkeysMoveLine();
         }
         if (userConfig.isShowSceneGraph && !userConfig.isUseCustomTheme) { // 是否显示场景图形
-            // 夏日主题个别动物上台面
+            // 重画场景中心图形
+			if (userConfig.sceneThemeMode === 0) drawCenterGraphSvg("svg-default-center");
+			if (userConfig.sceneThemeMode === 1) drawCenterGraphSvg("svg-snow");
+			// 夏日主题个别动物上台面
             if (userConfig.sceneThemeMode === 5) {
                 drawIconRandom("🦀", "ss", 1, false, true, gameSceneCanvas);
                 drawIconRandom("🦀", "xxs", 2, false, true, gameSceneCanvas);
